package flight.reservation.order;

import flight.reservation.flight.ScheduledFlight;
import flight.reservation.payment.PaymentProcessor;

import java.util.Arrays;
import java.util.List;

public class FlightOrder extends Order {
    private final List<ScheduledFlight> flights;
    static List<String> noFlyList = Arrays.asList("Peter", "Johannes");

    public FlightOrder(List<ScheduledFlight> flights) {
        this.flights = flights;
    }

    public static List<String> getNoFlyList() {
        return noFlyList;
    }

    public List<ScheduledFlight> getScheduledFlights() {
        return flights;
    }

    public boolean processOrder(PaymentProcessor processor) throws IllegalStateException {
        if (isClosed()) {
            // Payment is already proceeded
            return true;
        }
        if (processor == null) {
            throw new IllegalStateException("Payment information is not set or not valid.");
        }
        boolean isPaid = processor.pay(this.getPrice());
        if (isPaid) {
            this.setClosed();
        }
        return isPaid;
    }
}
